--- a/css/components.css
+++ b/css/components.css
@@ -7,6 +7,7 @@
   font-weight: 900;
   line-height: 150%;
   transition: background-color 0.3s ease;
+  margin-right: 1.8rem;
 }
 
 .btn-blue:hover {
