--- a/css/components.css
+++ b/css/components.css
@@ -1,3 +1,8 @@
+.button {
+  display: flex;
+  gap: 1.7rem;
+}
+
 .btn-blue {
   padding: 1.6rem 4rem;
   border-radius: 2.9rem;
@@ -7,7 +12,6 @@
   font-weight: 900;
   line-height: 150%;
   transition: background-color 0.3s ease;
-  margin-right: 1.8rem;
 }
 
 .btn-blue:hover {
