--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ nav {
   max-width: 44.8rem;
 }
 
+.info-768 {
+  display: none;
+}
+
 .s-hero .info h1 {
   margin-bottom: 3.2rem;
 }
@@ -71,7 +75,7 @@ nav {
 }
 
 .footer .footer-cta {
-  margin-top: -30px;
+  margin-top: -3rem;
   background-image: url(../assets/img-footer.png);
   background-size: cover;
   background-position: center;
@@ -95,36 +99,112 @@ nav {
   max-width: 35.5rem;
 }
 
-
-
-
-
-
-
-
 @media (max-width: 1200px) {
   .s-hero {
     gap: 5rem;
   }
   .s-hero .info {
-    max-width: 280px;
+    max-width: 40.7rem;
   }
   .s-hero .info h1 {
-    font-size: 40px;
+    font-size: 4rem;
   }
   .s-hero .info p {
-    font-size: 16px;
+    font-size: 1.6rem;
+  }
+  .s-content .cards {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .footer-cta .title-footer {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+  }
+  .footer-cta .title-footer h2 {
+    max-width: 55.4rem;
+    padding-bottom: 2.4rem;
+  }
+  .footer-cta .title-footer p {
+    max-width: 56.5rem;
+    padding-bottom: 24px;
   }
 }
 
 @media (max-width: 991px) {
-  
+  .s-hero .info {
+    max-width: 33.7rem;
+  }
+  .s-hero .info h1 {
+    font-size: 2.8rem;
+  }
+  .s-hero .info p {
+    font-size: 1.4rem;
+    max-width: 25rem;
+    margin: 0 auto;
+    padding-bottom: 2.4rem;
+  }
+  .button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.6rem;
+  }
 }
 
 @media (max-width: 768px) {
-  
+  .s-hero .info {
+    display: none;
+  }
+  .info-768 {
+    width: 100%;
+    max-width: 44.8rem;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+  }
+  .info-768 h1 {
+    font-size: 4.8rem;
+    padding: 7.2rem 0 2.4rem 0;
+  }
+  .info-768 p {
+    font-size: 1.6rem;
+    padding-bottom: 2.4rem;
+  }
+  .s-content .info {
+    max-width: 50.4rem;
+    margin: 0 auto;
+  }
+  .s-content .info h3 {
+    font-size: 1.4rem;
+  }
+  .s-content .info h2 {
+    font-size: 3.6rem;
+  }
+  .s-content .info p {
+    font-size: 1.6rem;
+  }
 }
 
 @media (max-width: 560px) {
-  
+  .info-768 {
+    max-width: 30.5rem;
+  }
+  .info-768 h1 {
+    font-size: 4rem;
+  }
+  .s-content .info h3 {
+    font-size: 1.2rem;
+  }
+  .s-content .info h2 {
+    font-size: 3.2rem;
+  }
+  .footer-cta .title-footer h2 {
+    font-size: 3.2rem;
+  }
+  .footer-cta .title-footer p {
+    font-size: 1.6rem;
+  }
 }
